<resources>
    <string name="app_name">Canteen Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nicht eingelogged</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_address_fragment">Hello ADDRESS fragment kdlsjgdjg löjgdflkjg ödfjgödlkfjgölksjgfkdlöjglkdfjglködgjlködfgjklödfjglködfsjglöksgjkölsdjgkldsfjg dälöfgj löksd jgöldfshg lsdfhg ldflhgöldshglödfhgöldfhgölsdhgölsdfhg dlkhg dlöshgölsdhg lödsfhgöldsfhg sdlfghlsödghlösdf ldsg ldsöfhg ölsdhgö ldfghd Hello ADDRESS</string>
    <string name="hello_rating_fragment">Hello RATING salgj öslgh dsölgh öldshgdflöghdfsögh lödfsh ödfsghöldsfhgöls hsödlhg ldsfhg lsdfhg lsdhdflkhglösdfhgöldsfhglösdfghlödsfhglödshglödfshgölfdhgölsdghödsfhgökldfshgölsdhglöksdhgödlfsghölfghöskldghökldsfh sldkgh öldsfh fragment lögj egtelögdsflögh öldfgöldfghdfölghlösdghlsödh ösdg ölsdhg dslh öghdsfölh lh ölh öl löhlö löh öh Hello RATING</string>
    <string name="edtName_hint">Name der Kantine</string>
    <string name="edtDummy_hint">dummy to test1</string>
    <string name="edtDummy_hint1">dummy1</string>
    <string name="edtDummy_hint2">dummy2</string>
    <string name="mniSaveChanges">Save</string>
    <string name="edtMenuName_hint">Tagesmenü</string>
    <string name="edtMenuPrice_hint">Menüpreis</string>
    <string name="txvWaitingTime">Durchschnittliche Wartezeit (min)</string>
    <string name="edtAddress_hint">Adresse der Kantine</string>
    <string name="edtWebsite_hint">Webseite (URL)</string>
    <string name="edtPhone_hint">Telefon</string>
    <string name="txtRating">Bewertungen</string>
    <string name="txtAvgRating">Durchschnitt:</string>
    <string name="btnShowInMap_hint">Zeige auf Karte</string>
    <string name="btnTakeFromMap_hint">Adresse aus Karte übernehmen</string>
    <string name="title_activity_login">Anmelden</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="edtUserName_hint">Username</string>
    <string name="edtPassword_hint">Passwort</string>
    <string name="btnLogin_text">Login</string>
    <string name="msg_LoginNotSuccessful">Login nicht erfolgreich</string>
    <string name="btnDeleteRating">Löschen</string>
    <string name="btnHomeLogin_hint">Anmelden</string>
    <string name="edtHomeTxt">Sie sind nicht angemeldet.</string>
</resources>
